big refactor, color dictionaries, modify gitignore

--- a/config.ini.template
+++ b/config.ini.template
@@ -1,6 +1,14 @@
 [twitter]
-consumer_key = 
-consumer_secret = 
-access_token = 
-access_token_secret = 
+consumer_key =
+consumer_secret =
+access_token =
+access_token_secret =
 
+[location]
+lat =
+long =
+dist =
+
+[paths]
+output =
+input =
